maven/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: maven
  namespace: maven
spec:
  type: ClusterIP
  selector:
    app: maven
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maven
  namespace: maven
  labels:
    app: maven
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maven
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: maven
    spec:      
      restartPolicy: Always
      containers:
      - name: maven
        image: dzikoysk/reposilite:latest
        ports:
        - containerPort: 8000
          name: http
        volumeMounts:
        - name: maven-volume
          mountPath: /app/data
      volumes:
      - name: maven-volume
        persistentVolumeClaim:
          claimName: maven-pvc
